--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <i class="fab fa-github-square icon"></i>
                     </ul>
                     <a
-                        href="https://drive.google.com/file/d/1YOUGgUxEQQhrUGYz-pJNXRc_kpY9Kol9/view?usp=share_link">Resume</a>
+                        href="https://drive.google.com/file/d/1-ooZ5bkucoAMP5s1JbGRLrebrpa0T-8x/view?usp=sharing">Resume</a>
                     <a href="https://github.com/Aranshu?tab=repositories">My Work</a>
             </article>
         </section>
